=================
Changes for Crate
=================

Unreleased
==========

2015/10/13 0.52.0
=================

 - The client will now accept IPv6 literals as server addresses

 - Updated crate-admin to 0.15.0 which includes following changes:

   - display cluster checks on overview page

   - display relative Crate process CPU usage as bar chart and show number of
     cores per node

 - Allow quoted subscript expressions in SQL statement. This will allow
   supporting various client applications on Windows that use ODBC.

 - Added ``try_cast`` scalar function.

 - Added cluster checks which are exposed via the ``sys.checks`` table.

 - Added ``os_info`` column to ``sys.nodes`` table.
   Currently the column only lists the number of available processors in the JVM
   (which is usually equal to the number of cores of the CPU).

 - Upgraded Elasticsearch to 1.7.2
   This update changes the default value for delayed allocation of unassigned
   shards (see: `https://crate.io/docs/en/latest/configuration.html#unassigned`_).
   Also updated the upstream of EC2 discovery module

2015/10/09 0.51.6
=================

 - Fix check if setting is settable/resettable on runtime for nested settings

 - Exposed missing cluster gateway settings

 - Throw an exception when someone attempts to change non-runtime changeable
   settings

 - Fixed a race condition that could cause COPY FROM operations to get stuck if
   shards were to be relocated.

 - Fixed a race condition that could cause the re-creation of an already
   existing table partition and therefore potential dataloss when creating
   a lot of partitions simultaniously using COPY FROM or bulk inserts.

2015/10/07 0.51.5
=================

 - Updated crate-admin to 0.14.6 which includes following changes:

   - fixed a visual bug that let an item in the node/table list partly disappear
     if scrolling gets enabled

   - fixed URL to download in dropdown that notifies about old Crate version
